# libelula-inc

./: .env.example  README.md  main.py  pyproject.toml  tailwind.py
app/: config.py  main.py
app/static/: output.css
app/templates/: index.html
app/templates/about/: about.html  index.html
app/templates/home/: home.html
static/: basecoat.min.css  basecoat.min.js  output.css
