[project]
name = "libelula-inc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "jinja2>=3.1.6",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "djlint>=1.36.4",
    "basedpyright>=1.29.4",
    "pytailwindcss>=0.2.0",
    "arel>=0.3.0",
]
